--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.0+2
   flutter_native_splash: ^1.3.1
+  material_design_icons_flutter: ^5.0.6295
   get: ^4.3.8
   get_storage: ^2.0.3
   dio: ^4.0.3
